--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,65 +1,65 @@
 .board {
-    height: 80%;
-    width: 50%;
-    display: inline-block;
-    width: 50%;
-    height: 50%;
-    float: left;
-    margin: 8%;
+  width: 80%;
+  display: inline-block;
+  margin: 4%;
 }
 
 .card {
-    height: 200px;
-    width: 150px;
-    border: 1px solid #000000;
-    background: #ffff00;
-    border-radius: 10px;
-    float: left;
-    margin: 8%;
+  height: 200px;
+  width: 150px;
+  border: 1px solid #000000;
+  background: #ffff00;
+  border-radius: 10px;
+  display: inline-block;
+  margin: 4%;
 }
 
 h1 {
-    color: rgb(2, 132, 130);
+  color: rgb(2, 132, 130);
 }
 
 h2 {
-    color: #ffd700;
+  color: #ffd700;
 }
 
 .name {
-    color: #ff0000
+  color: #ff0000
 }
 
+html,
 body {
-    text-align: center;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  text-align: center;
 }
 
 nav {
-    background: #808080;
+  background: #808080;
 }
 
 a {
-    background: #ffbf00;
-    color: white;
-    padding: 35px;
-    display: block;
-    float: left;
+  background: #ffbf00;
+  color: white;
+  padding: 35px;
+  display: block;
+  float: left;
 }
 
 a:hover {
-    background: #ee5f3c;
+  background: #ee5f3c;
 }
 
 .clearfix:after {
-    visibility: hidden;
-    display: block;
-    content: " ";
-    clear: both;
-    height: 0;
-    font-size: 0;
+  visibility: hidden;
+  display: block;
+  content: " ";
+  clear: both;
+  height: 0;
+  font-size: 0;
 }
 
 footer {
-    background: #808080;
-    clear: both;
+  background: #808080;
+  clear: both;
 }
