--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -12,9 +12,10 @@ body {
 
 .wrapper {
   background: lightgrey;
-  height: 100%;
+  height: calc(100% - 1.5em);
   margin: 0 auto;
   overflow: auto;
+  padding-bottom: 5px;
 }
 
 .top-bar {
@@ -65,6 +66,13 @@ h2 {
   width: 100%;
 }
 
+/*Remove spinner buttons*/
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
 .begin {
   background: transparent;
   border: none;
@@ -98,8 +106,11 @@ h3 {
 
 p {
   color: black;
-  display: none;
   padding: 0 1em;
+}
+
+.about {
+  display: none;
 }
 
 .banner {
@@ -139,13 +150,6 @@ p {
   top: 0;
 }
 
-.vcenter {
-  height: 47%;
-  margin-top: -23.5%;
-  padding: 0 .5em;
-  top: 50%;
-}
-
 img {
   height: 100%;
   width: 100%;
@@ -157,9 +161,9 @@ footer {
   color: grey;
   font-size: .8em;
   height: 1.5em;
-  position: absolute;
   text-align: center;
   width: 100%;
+  margin: 0 auto;
 }
 
 .ga {
@@ -173,9 +177,15 @@ footer {
   transform: translateY(0);
 }
 
+.deal {
+  animation: deal 1s ease;
+  transform: scale(1);
+}
+
 .slide {
   animation: slideIn 1s ease;
-  display: block;
+  display: flex;
+  align-items: center;
   opacity: 1;
   transform: translateX(0);
 }
@@ -204,6 +214,11 @@ footer {
   }
 }
 
+@keyframes deal {
+  from {transform: scale(0);}
+  to {transform: scale(1);}
+}
+
 @keyframes slideIn {
   0% {
     display: none;
@@ -226,12 +241,6 @@ footer {
     padding-top: 31%;
     width: 31%;
   }
-
-  .vcenter {
-    height: 31%;
-    margin-top: -15.5%;
-    top: 50%;
-  }
 }
 
 @media (min-width: 950px) {
@@ -239,12 +248,6 @@ footer {
     margin: 2% 0 0 2%;
     padding-top: 22.5%;
     width: 22.5%;
-  }
-
-  .vcenter {
-    height: 22.5%;
-    margin-top: -11.25%;
-    top: 50%;
   }
 
   .wrapper,
